--- a/src/assets/css/estilos.css
+++ b/src/assets/css/estilos.css
@@ -1,42 +1,63 @@
 .pie {
-    background-color: black !important;
+  background-color: black !important;
+  color: white;
+}
+p{
+    color: white;
+}
+a{
+    color: white;
+}
+router-link{
     color: white;
 }
 
 .menuActivoL {
-    color: white !important;
-    text-decoration:none;
+  color: white !important;
+  text-decoration: none;
 }
 .menuActivo {
-    color:white !important;
-    text-decoration-color: underline 1px black;
-    text-decoration:none;
+  color: white !important;
+  text-decoration-color: underline 1px black;
+  text-decoration: none;
 }
 
-.navMargin{
-    margin-left:10px;
-    margin-right:10px;
+.navMargin {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-footer{
-    margin-top:5%;
+footer {
+  margin-top: 5%;
 }
-nav{
-    background:#1d1d1f;
-    text-decoration: none;
+nav {
+  background: #1d1d1f;
+  text-decoration: none;
 }
-h1{
+h1 {
   text-align: center;
-  color:black;
+  color: white;
 }
 
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-  }
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+}
 
-  em{
-      color:red;
-  }
+em {
+  color: red;
+}
+
+.carta-grupos {
+  width: 17rem;
+  margin: 1rem;
+  padding: 5px;
+  background:#17191b;
+  border-radius: 15px;
+  color: white;
+  -webkit-box-shadow: 10px 10px 22px 0px rgba(0,0,0,0.55);
+  -moz-box-shadow: 10px 10px 22px 0px rgba(0,0,0,0.55);
+  box-shadow: 10px 10px 22px 0px rgba(0,0,0,0.55);
+}
