--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -81,6 +81,7 @@ header label {
 /******Menus******************************************************************/
 
 .ContenedorSup {
+
   display: flex;
   margin-top: 60px;
   width: 100%;
@@ -112,16 +113,17 @@ table {
   text-align: center;
 }
 .cont {
-  width: 75%;
+  width: 100%;
   background-color: white;
-  margin-right: 30px;
+  margin-right: 30px; 
+  margin-left: 30px; 
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
   border-radius:8px;
 }
 
-.tableClass tr:hover{
+/* .tableClass tr:hover{
 	text-decoration: underline;
-}
+} */
 
 
 
