--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -81,15 +81,13 @@ header label {
 /******Menus******************************************************************/
 
 .ContenedorSup {
-
   display: flex;
   margin-top: 60px;
   width: 100%;
-
-  
 }
 
-.ContenedorSup h1,h2{
+.ContenedorSup h1,
+h2 {
   text-align: center;
 }
 .info {
@@ -98,8 +96,9 @@ header label {
   margin-left: 30px;
   margin-right: 30px;
   height: 100%;
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-  border-radius:8px;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  border-radius: 8px;
 }
 .info h1 {
   text-align: center;
@@ -118,64 +117,200 @@ table {
 .cont {
   width: 100%;
   background-color: white;
-  margin-right: 30px; 
-  margin-left: 30px; 
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-  border-radius:8px;
+  margin-right: 30px;
+  margin-left: 30px;
+  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
+    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+  border-radius: 8px;
 }
-
-
-
 
 /******Foro******************************************************************/
 
-.contenedorForo{
-  background-color:rebeccapurple;
-  width:65%;
-  justify-content: center;
-  height:auto;
-  border-radius: 5px;
-  color:white;
+.contenedorForo {
+  background-color: rebeccapurple;
+  width: 75%;
   margin:auto;
-
+  padding:5px;
+}
+.contenedorPrincipal{
+  justify-content: center;
+  height: auto;
+  border-radius: 5px;
+  color: white;
+  
 }
 
-.div{
-  display:none;
-  background-color:sandybrown;
-  color:black;
+
+.div {
+  display: none;
+  background-color: sandybrown;
+  color: black;
   margin-top: 3px;
 }
 
-
-
-
-.fas{
+.fas {
   cursor: pointer;
 }
 
-.modeloContenedor{
-  padding: 5px;
+.modeloContenedor {
+  padding: 15px;
 }
 
-.modeloContenedor input{
+.modeloContenedor input {
   margin-top: 3px;
-
 }
-
 
 .customImput {
   width: 50%;
   justify-content: center;
   text-align: center;
-  margin:auto;
+  margin: auto;
 }
 
-.imputCss{
+.imputCss {
   margin-bottom: 10px;
+}
+
+
+/* MI PERFIL */ 
+
+.emp-profile{
+  padding: 3%;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  border-radius: 0.5rem;
+  background: #fff;
+}
+.profile-img{
+  text-align: center;
+}
+.profile-img img{
+  width: 70%;
+  height: 100%;
+}
+.profile-img .file {
+  position: relative;
+  overflow: hidden;
+  margin-top: -20%;
+  width: 70%;
+  border: none;
+  border-radius: 0;
+  font-size: 15px;
+  background: #212529b8;
+}
+.profile-img .file input {
+  position: absolute;
+  opacity: 0;
+  right: 0;
+  top: 0;
+}
+.profile-head h5{
+  color: #333;
+}
+.profile-head h6{
+  color: #0062cc;
+}
+.profile-edit-btn{
+  border: none;
+  border-radius: 1.5rem;
+  width: 70%;
+  padding: 2%;
+  font-weight: 600;
+  color: #6c757d;
+  cursor: pointer;
+}
+.proile-rating{
+  font-size: 12px;
+  color: #818182;
+  margin-top: 5%;
+}
+.proile-rating span{
+  color: #495057;
+  font-size: 15px;
+  font-weight: 600;
+}
+.profile-head .nav-tabs{
+  margin-bottom:5%;
+}
+.profile-head .nav-tabs .nav-link{
+  font-weight:600;
+  border: none;
+}
+.profile-head .nav-tabs .nav-link.active{
+  border: none;
+  border-bottom:2px solid #0062cc;
+}
+.profile-work{
+  padding: 14%;
+  margin-top: -15%;
+}
+.profile-work p{
+  font-size: auto;
+  color: #818182;
+  font-weight: 600;
+  margin-top: 10%;
+}
+.profile-work a{
+  text-decoration: none;
+  color: #495057;
+  font-weight: 600;
+  font-size: 14px;
+}
+.profile-work ul{
+  list-style: none;
+}
+.profile-tab label{
+  font-weight: 600;
+}
+.profile-tab p{
+  font-weight: 600;
+  color: #0062cc;
+}
+
+
+.prueba p:empty:not(:focus)::before {
+  content: attr(data-placeholder);
+}
   
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
