--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -127,10 +127,16 @@ table {
 /******Foro******************************************************************/
 
 .contenedorForo {
-  background-color: rebeccapurple;
+
+  background-color: rgba(99, 147, 218, 0.849);
+  color: black;
   width: 75%;
   margin:auto;
-  padding:5px;
+  padding:20px;
+  margin-top: 10px;
+  border-radius:5px 5px 0px 0px;
+  user-select: none;
+  
 }
 .contenedorPrincipal{
   justify-content: center;
@@ -139,17 +145,28 @@ table {
   color: white;
   
 }
+.test{
+  width: 75%;
+  margin:auto;
+  padding:20px;
+  border-radius:0px 0px 5px 5px;
+}
 
-
-.div {
+.boton-foro{
+  position: absolute;
+  right: 45px;
+  top: 80px;
+}
+.contenedorResulado {
   display: none;
-  background-color: sandybrown;
+  background-color: rgba(106, 161, 245, 0.603);
   color: black;
   margin-top: 3px;
 }
 
 .fas {
   cursor: pointer;
+  user-select: none;
 }
 
 .modeloContenedor {
