--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -82,27 +82,48 @@ header label {
 
 .ContenedorSup {
   display: flex;
-  margin-top: 60px;
-  width: 100%;
+ 
+  width: 100%; 
+  margin-top: 2.5rem;
+  
+ 
 }
 
-.ContenedorSup h1,
-h2 {
+.ContenedorSup h1,h2{
   text-align: center;
+  
 }
 .info {
-  background-color: white;
-  width: 25%;
+  height: 100%;
   margin-left: 30px;
   margin-right: 30px;
-  height: 100%;
+ 
+
+}
+
+.info a{
+
+  margin-top:5px;
+  border-radius:5px;
+  
+cursor: pointer;
+} 
+
+.info a:hover{
+  background:rgba(0, 0, 0, 0.226);
+}
+
+.cont {
+
+  
+  background-color: rgb(255, 255, 255);
+  margin-right: 30px;
+  margin-left: 30px;
   box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
     rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-  border-radius: 8px;
+border-radius: 20px;
 }
-.info h1 {
-  text-align: center;
-}
+
 
 table tr {
   border-top: 1px solid black;
@@ -114,31 +135,33 @@ table {
   width: 100%;
   text-align: center;
 }
-.cont {
-  width: 100%;
-  background-color: white;
-  margin-right: 30px;
-  margin-left: 30px;
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
-    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-  border-radius: 8px;
-}
+
 
 /******Foro******************************************************************/
 
 
 
 
-.boton-foro{
-  position: absolute;
-  right: 45px;
-  top: 80px;
+
+
+
+
+
+
+
+
+
+.boton-foro:hover {
+ background-color: rgba(32, 121, 32, 0.849);
+
 }
 
 
 
  img {
-  width: 100% ;
+  width: 50%;
+  display: block;
+  margin: auto;
 }
 .fas {
   cursor: pointer;
@@ -166,8 +189,15 @@ table {
 
 
 
+.ContenedorAppVue{
+  background-color: rgb(255, 255, 255);
+  margin:60px 30px 30px 30px;
+  border-radius:20px;
 
-
+}
+.ContenedorAppVue h2,h1{
+text-align: center;
+}
 
 
 
