--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,19 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 * {
   scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 body {
   background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #f5f7fa 0%, #b8c6db 74%);
-  min-height: 100vh;
+ 
+  box-sizing: border-box;
+
 }
 section {
   width: 100%;
-  margin-bottom: 25px;
+  
 }
 
 header .contenedor {
@@ -187,13 +190,12 @@ table {
 }
 
 
-
-.ContenedorAppVue{
-  background-color: rgb(255, 255, 255);
-  margin:60px 30px 30px 30px;
-  border-radius:20px;
-
+.estiloContenedor {
+  background-color: white; 
+  border-radius: 7px; 
+  margin:56px 8px 0px 8px;
 }
+
 .ContenedorAppVue h2,h1{
 text-align: center;
 }
@@ -242,10 +244,9 @@ text-align: center;
 /* MI PERFIL */ 
 
 .emp-profile{
-  padding: 3%;
-  margin-top: 5%;
+   padding: 3%;
   margin-bottom: 3%;
-  border-radius: 0.5rem;
+  border-radius: 0.5rem; 
   background: #fff;
 }
 .profile-img{
@@ -279,9 +280,10 @@ text-align: center;
 }
 .profile-edit-btn{
   border: none;
-  border-radius: 1.5rem;
-  width: 70%;
-  padding: 2%;
+  width:180px;
+  margin-top: 5px;
+  border-radius: 7px;
+  padding: 5%; 
   font-weight: 600;
   color: #6c757d;
   cursor: pointer;
@@ -339,6 +341,10 @@ text-align: center;
   content: attr(data-placeholder);
 }
   
+.perfil-text-cambiarContrasenia{
+  text-align: center;
+  align-items: center;
+}
 
 
 
@@ -360,26 +366,88 @@ text-align: center;
 
 
 
+/******Home******************************************************************/
+
+section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; 
+}
+
+.articulo-card{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+ margin-top: 30px;
+ margin-bottom: 60px;
+
+ 
+}
+
+.texo-articulo{
+  width:500px;
+  margin-top:60px;
+  justify-content: center;
+  align-items: center;
+
+}
+.articulo-contenedor{
+justify-content: space-between;
+ display:flex;
+
+}
+
+
+
+.texo-articulo a{
+  text-decoration: none;
+  color: black;
+  width: auto;
+  padding-left: 30px;
+  padding-right: 30px;
+  background-color: #ffca28;
+  font-size:23px;
+  cursor: pointer;
+  border: 0px;
+  border-radius: 7px;
+ 
+}
+
+.texo-articulo h2{
+ 
+    color: #1c1e27;
+    font-size: 35px;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 20px;
+
+}
+.texo-articulo h3{
+  margin-bottom:20px;
+  font-size: 22px;
+
+}
+
+.texo-articulo p{
+  color: #1c1e27;
+  font-size: 19px;
+  font-weight: 200;
+  line-height: 28px;
+}
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.dos{
+  margin-left: 230px;
+}
+.uno{
+  margin-right: 230px;
+}  
+.articulo-img img{
+ width: 80%;
+}
 
 
 /******RESOLUCION******************************************************************/
