--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,488 +1,200 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 * {
-  scroll-behavior: smooth;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
 }
+
 body {
-  background-color: #b8c6db;
- 
-  box-sizing: border-box;
-
+  --color: #50b7f5;
+  --background: #e6ecf0;
 }
-section {
-  width: 100%;
-  
+.contenedorDiv{
+  display: flex;
+  height: 100vh;
+  max-width: 1300px;
+  margin-right: auto;
+  margin-left: auto;
+  padding: 0 10px;
 }
-
-header .contenedor {
-  display: table;
-}
-
-header {
-  width: 100%;
+.sidebarUser img {
   height: 50px;
-  background: rgba(38, 87, 153);
-  border-color: rgba(38, 87, 153);
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 100;
+  border-radius: 50%;
 }
 
-header label {
-  float: right;
-  font-size: 28px;
-  margin: 6px 0;
+.sidebarUser {
+  display: flex;
+  align-items: center;
+}
+
+.sidebarUser p {
+  font-size: 17px;
+  font-weight: 600;
+  margin-left: 15px;
+}
+
+.sidebarOption {
+  display: flex;
+  align-items: center;
   cursor: pointer;
-  color: #fff;
+}
+.sidebarOption .fas {
+  padding: 20px;
+}
+.sidebarOption h2 {
+  font-weight: 700;
+  font-size: 20px;
+  margin-right: 20px;
+}
+.sidebarOption:hover {
+  background-color: var(--background);
+  border-radius: 30px;
+  color: var(--color);
+  transition: color 100ms ease-out;
 }
 
-.contenedor h1 {
-  float: left;
-  color: #fff;
+.sidebar {
+  border-right: 1px solid var(--background);
+  flex: 0.2;
+  min-width: 250px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 20px;
 }
 
-.contenedor {
-  width: 98%;
-  margin: auto;
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*feed */
+
+.feed {
+  flex: 0.5;
+  border-right: 1px solid var(--background);
+  min-width: fit-content;
+  overflow-y: scroll;
+  margin-top: 20px;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
-#menu-barra {
+.feed::-webkit-scrollbar {
   display: none;
 }
-.menu {
-  position: absolute;
-  top: 50px;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  transition: all 0.5s;
-  transform: translateX(-100%);
-}
 
-.menu a {
-  display: block;
-  color: rgb(255, 255, 255);
-  height: 50px;
-  text-decoration: none;
-  padding: 15px;
-  border-bottom: 1px solid rgb(255, 255, 255);
-  background: rgba(0, 0, 0, 0.89);
-}
-.menu a:hover {
-  background: rgb(12, 99, 214);
-}
-
-#menu-barra:checked ~ .menu {
-  transform: translateX(0%);
-}
-
-/******Menus******************************************************************/
-
-.ContenedorSup {
-  display: flex;
- 
-  width: 100%; 
-  margin-top: 2.5rem;
-
-}
-
-.ContenedorSup h1,h2{
-  text-align: center;
-  
-}
-.info {
-  height: 100%;
-  margin-left: 30px;
-  margin-right: 30px;
- 
-
-}
-
-.info a{
-
-  margin-top:5px;
-  border-radius:5px;
-  
-cursor: pointer;
-} 
-
-.info a:hover{
-  background:rgba(0, 0, 0, 0.226);
-}
-
-.cont {
-
-  
-  background-color: rgb(255, 255, 255);
-  margin-right: 30px;
-  margin-left: 30px;
-  box-shadow: rgba(136, 165, 191, 0.48) 6px 2px 16px 0px,
-    rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
-border-radius: 20px;
-}
-
-
-table tr {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  font-size: 20px;
-}
-
-table {
-  width: 100%;
-  text-align: center;
-}
-
-
-/******Foro******************************************************************/
-
-
-
-
-
-
-
-
-
-
-
-
-
-.boton-foro:hover {
- background-color: rgba(32, 121, 32, 0.849);
-
-}
-
-
-
- img {
-  width: 50%;
-  display: block;
-  margin: auto;
-}
-.fas {
-  cursor: pointer;
-  user-select: none;
-}
-
-.modeloContenedor {
-  padding: 15px;
-}
-
-.modeloContenedor input {
-  margin-top: 3px;
-}
-
-.customImput {
-  width: 50%;
-  justify-content: center;
-  text-align: center;
-  margin: auto;
-}
-
-.imputCss {
-  margin-bottom: 10px;
-}
-
-
-.estiloContenedor {
-  background-color: white; 
-  border-radius: 7px; 
-  margin:56px 8px 0px 8px;
-}
-
-.ContenedorAppVue h2,h1{
-text-align: center;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* MI PERFIL */ 
-
-.emp-profile{
-   padding: 3%;
-  margin-bottom: 3%;
-  border-radius: 0.5rem; 
-  background: #fff;
-}
-.profile-img{
-  text-align: center;
-}
-.profile-img img{
-  width: 70%;
-  height: 100%;
-}
-.profile-img .file {
-  position: relative;
-  overflow: hidden;
-  margin-top: -20%;
-  width: 70%;
-  border: none;
-  border-radius: 0;
-  font-size: 15px;
-  background: #212529b8;
-}
-.profile-img .file input {
-  position: absolute;
-  opacity: 0;
-  right: 0;
+.feed_header {
+  position: sticky;
   top: 0;
+  background-color: white;
+  z-index: 100;
+  border-bottom: 1px solid var(--background);
+  padding: 15px 20px;
 }
-.profile-head h5{
-  color: #333;
+
+.feed_header h2 {
+  font-size: 20px;
+  font-weight: 800;
 }
-.profile-head h6{
-  color: #0062cc;
+
+.boxText_input img {
+  height: 50px;
+  border-radius: 50%;
 }
-.profile-edit-btn{
+.boxText {
+  padding-bottom: 10px;
+  border-bottom: 8px solid var(--background);
+  padding-right: 10px;
+}
+
+.boxText form {
+  display: flex;
+  flex-direction: column;
+}
+
+.boxText_input {
+  display: flex;
+  padding: 20px;
+}
+.boxText_input input {
+  flex: 1;
+  margin-left: 20px;
+  font-size: 20px;
   border: none;
-  width:180px;
-  margin-top: 5px;
-  border-radius: 7px;
-  padding: 5%; 
+  outline: none;
+}
+.boxText_btn {
+  background-color: var(--color);
+  border: none;
+  color: white;
+  font-weight: 900;
+  border-radius: 30px;
+  width: 30%;
+  height: 35px;
+  margin-top: 20px;
+  margin-left: auto;
+}
+
+
+
+
+.post{
+  display: flex;
+  align-items: flex-start;
+  border-bottom: 1px solid var(--background);
+  padding-bottom: 10px;
+ 
+}
+
+.post_avatar{
+  padding:20px;
+}
+.post_avatar img {
+  height: 50px;
+  border-radius: 50%;
+}
+
+.post_body{
+  flex:1;
+  padding:10px;
+
+}
+.post_body img{
+  width:450px;
+  object-fit: contain;
+  border-radius: 20px;
+
+}
+
+.post_title{
   font-weight: 600;
-  color: #6c757d;
-  cursor: pointer;
-}
-.proile-rating{
-  font-size: 12px;
-  color: #818182;
-  margin-top: 5%;
-}
-.proile-rating span{
-  color: #495057;
   font-size: 15px;
-  font-weight: 600;
+  color:rgb(0, 0, 0);
+ 
 }
-.profile-head .nav-tabs{
-  margin-bottom:5%;
-}
-.profile-head .nav-tabs .nav-link{
-  font-weight:600;
-  border: none;
-}
-.profile-head .nav-tabs .nav-link.active{
-  border: none;
-  border-bottom:2px solid #0062cc;
-}
-.profile-work{
-  padding: 14%;
-  margin-top: -15%;
-}
-.profile-work p{
-  font-size: auto;
-  color: #818182;
-  font-weight: 600;
-  margin-top: 10%;
-}
-.profile-work a{
-  text-decoration: none;
-  color: #495057;
-  font-weight: 600;
-  font-size: 14px;
-}
-.profile-work ul{
-  list-style: none;
-}
-.profile-tab label{
-  font-weight: 600;
-}
-.profile-tab p{
-  font-weight: 600;
-  color: #0062cc;
-}
-
-
-.prueba p:empty:not(:focus)::before {
-  content: attr(data-placeholder);
-}
-  
-.perfil-text-cambiarContrasenia{
-  text-align: center;
-  align-items: center;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/******Home******************************************************************/
-
-section{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center; 
-}
-
-.articulo-card{
-  display: flex;
-  flex-direction: column;
-  width: 80%;
- margin-top: 30px;
- margin-bottom: 60px;
-
+.post_body_text{
+  margin-bottom: 20px;
+  font-size: 15px;
+  margin-top: 15px;
  
 }
 
-.texo-articulo{
-  width:500px;
-  margin-top:60px;
-  justify-content: center;
-  align-items: center;
 
+
+
+
+.event{
+  flex: 0.3;
 }
-.articulo-contenedor{
-justify-content: space-between;
- display:flex;
-
-}
-
-
-
-.texo-articulo a{
-  text-decoration: none;
-  color: black;
-  width: auto;
-  padding-left: 30px;
-  padding-right: 30px;
-  background-color: #ffca28;
-  font-size:23px;
-  cursor: pointer;
-  border: 0px;
-  border-radius: 7px;
- 
-}
-
-.texo-articulo h2{
- 
-    color: #1c1e27;
-    font-size: 35px;
-    font-weight: bold;
-    text-align: center;
-    margin-bottom: 20px;
-
-}
-.texo-articulo h3{
-  margin-bottom:20px;
-  font-size: 22px;
-
-}
-
-.texo-articulo p{
-  color: #1c1e27;
-  font-size: 19px;
-  font-weight: 200;
-  line-height: 28px;
-}
-
-
-
-
-.dos{
-  margin-left: 230px;
-}
-.uno{
-  margin-right: 230px;
-}  
-.articulo-img img{
- width: 80%;
-}
-
-
-/******RESOLUCION******************************************************************/
-
-/*Menu**********************/
-/*Escritorio*/
-
-@media (min-width: 1024px) {
-  .menu {
-    position: static;
-    width: auto;
-    height: auto;
-    transform: translateX(0%);
-    float: right;
-    display: flex;
-  }
-
-  header label {
-    display: none;
-  }
-  .menu a {
-    border: none;
-    background: rgba(38, 87, 153);
-    border-bottom: 3px solid #fff;
-  }
-
-  .contenedor {
-    width: 1500px;
-  }
-}
-
-/*Banner**********************/
-/*Celular*/
-@media (min-width: 480px) {
-}
-/*Tablet*/
-@media (min-width: 768px) {
+.event img{
+  height: 250px;
 }
