--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -14,7 +14,7 @@ body {
 }
 .contenedorDiv{
   display: flex;
-  height: 100vh;
+  height: 100%;
   max-width: 1300px;
   margin-right: auto;
   margin-left: auto;
@@ -225,10 +225,40 @@ margin-top: 50px;
 
 
 
+/* Event */
 
 .event{
   flex: 0.3;
 }
 .event img{
   height: 250px;
+}
+.calendarioElement{
+  margin-top: 20px;
+  margin-left: 55px;
+
+}
+
+.currentEvents{
+  border: 1px solid var(--background);
+}
+
+.currentEvent{
+  min-width: 250px;
+  padding-left: 20px;
+  padding-right: 20px;
+  margin-top: 20px;
+}
+
+.currentEvent_contenedor{
+  border: 1px solid var(--background);
+margin-top: 50px;
+}
+.sidebarDot_event{
+  height:0.5rem;
+  width: 0.5rem;
+  border-radius: 50%;
+  background-color: red;
+  display: inline-block;
+  margin-bottom: 0.125rem;
 }
