--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -9,8 +9,8 @@
 
 body {
   --color: #50b7f5;
-  --background: #e6ecf0;
- 
+  --background: #CBD5E0;
+ background-color: #F4F4F7;
 }
 .contenedorDiv{
   display: flex;
@@ -28,6 +28,10 @@ body {
 .sidebarUser {
   display: flex;
   align-items: center;
+  padding:8px;
+  border-radius: 5px;
+  background-color: #FFFFFF;
+  border: 1px solid var(--background);
 }
 
 .sidebarUser p {
@@ -68,6 +72,8 @@ body {
 .sidebarClass{
 border: 1px solid var(--background);
 margin-top: 50px;
+background-color: white;
+border-radius:7px;
 }
 .sidebarClass h3{
   font-weight: 600;
@@ -111,16 +117,19 @@ margin-top: 50px;
 
 
 
+
 /*feed */
 
 .feed {
   flex: 0.5;
   border-right: 1px solid var(--background);
+  border-top: 1px solid var(--background);
   min-width: fit-content;
   overflow-y: scroll;
   margin-top: 20px;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  background-color:white;
 }
 .feed::-webkit-scrollbar {
   display: none;
