--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -169,7 +169,7 @@ border-radius:7px;
   padding-right: 10px;
 }
 
-.boxText form {
+.form {
   display: flex;
   flex-direction: column;
 }
@@ -177,6 +177,7 @@ border-radius:7px;
 .boxText_input {
   display: flex;
   padding: 20px;
+  
 }
 .boxText_input input {
   flex: 1;
@@ -184,17 +185,40 @@ border-radius:7px;
   font-size: 20px;
   border: none;
   outline: none;
+  
+}
+
+.addArchivos{
+  display: flex;
+}
+.select_file {
+  margin-right: 4px;
+  margin-top: 3px;
+}
+.image-upload i{
+  font-size:26px;
+}
+
+.boxText select{
+ 
+  outline: none;
+  width:90%;
+  margin-left:auto;
+  margin-right:auto;
+  height:35px;
+  font-size:15px;
 }
 .boxText_btn {
   background-color: var(--color);
   border: none;
   color: white;
   font-weight: 900;
-  border-radius: 30px;
+  border-radius: 7px;
   width: 30%;
   height: 35px;
   margin-top: 20px;
   margin-left: auto;
+  cursor: pointer;
 }
 
 
@@ -260,24 +284,32 @@ border-radius:7px;
   height: 250px;
 }
 .calendarioElement{
-  margin-top: 20px;
-  margin-left: 55px;
+  margin-top: 30px;
+  margin-left: 20px;
+}
 
-}
-.currentEvents{
-  border: 1px solid var(--background);
-}
+
 
 .currentEvent{
-  min-width: 250px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: 20px;
+  margin-top: 30px;
+  background-color:#FFFFFF;
+  border-radius: 7px;
+  margin-left: 20px;
+  
 }
 
 .currentEvent_contenedor{
   border: 1px solid var(--background);
-  margin-top: 50px;
+  border-radius: 7px;
+ 
+}
+
+.currentEvent_contenedor h3{
+  font-weight: 600;
+  padding: 10px;
+  font-size:1rem;
+  color:#4f5468;
+  text-transform: uppercase;
 }
 .sidebarDot_event{
   height:0.5rem;
