--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -166,7 +166,7 @@ border-radius:7px;
 .boxText {
   padding-bottom: 10px;
   border-bottom: 1px solid var(--background);
-  padding-right: 10px;
+ 
 }
 
 .form {
@@ -198,7 +198,17 @@ border-radius:7px;
 .image-upload i{
   font-size:26px;
 }
-
+.preview_contenedor{
+  width:95%;
+  margin: auto;
+  padding:10px;
+}
+.preview{
+  background-color: #50b7f5;
+  padding:5px;
+  border-radius: 7px;
+ 
+}
 .boxText select{
  
   outline: none;
