--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -202,7 +202,7 @@ width: 95%;
 }
 .preview_contenedor {
   width: 90%;
-  height:55px;
+  height:50px;
   margin: auto;
   padding: 10px;
   display: flex;
@@ -210,11 +210,17 @@ width: 95%;
   border-radius: 7px;
   border: 1px solid var(--background);
   margin-top: 6px;
+  overflow: hidden;
+ 
 }
 .preview {
   
   padding: 5px;
   
+}
+.file{
+  font-size:30px;
+  color:var(--color);
 }
 .equis{
   margin-left: auto;
