--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -165,13 +165,15 @@ body {
   display: flex;
   padding: 20px;
 }
-.boxText_input input {
+.boxText_input textarea {
   flex: 1;
   margin-left: 20px;
-  font-size: 20px;
+  font-size: 15px;
   border: none;
   outline: none;
-  width:419px;
+  width: 419px;
+  overflow: hidden;
+  resize: none;
 }
 
 .select_materia select {
