--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -69,12 +69,13 @@ body {
 }
 
 .sidebar {
-  border-right: 1px solid var(--background);
+ 
   flex: 0.2;
   min-width: 250px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-top: 20px;
+  padding: 20px;
+  height: 100vh;
+  position: sticky;
+  top:0;
 }
 
 .sidebarClass {
@@ -122,22 +123,25 @@ body {
   flex: 0.5;
   border-right: 1px solid var(--background);
   border-top: 1px solid var(--background);
+  border-left: 1px solid var(--background);
   min-width: 530px;
   overflow-y: scroll;
   margin-top: 20px;
   -ms-overflow-style: none;
   scrollbar-width: none;
   background-color: white;
+  
 }
 .feed::-webkit-scrollbar {
   display: none;
 }
 
 .feed_header {
+  
   position: sticky;
   top: 0;
+  
   background-color: white;
-  z-index: 100;
   border-bottom: 1px solid var(--background);
   padding: 15px 20px;
 }
@@ -321,8 +325,11 @@ body {
 
 /* Event */
 
-.event {
+.events {
   flex: 0.3;
+  height: 100vh;
+  position: sticky;
+  top:0;
 }
 .events_header {
   margin-top: 20px;
@@ -330,10 +337,9 @@ body {
   margin-left: 20px;
   border: 1px solid var(--background);
   padding: 12.8px 20px;
+  
 }
-.event img {
-  height: 250px;
-}
+
 .calendarioElement {
   margin-top: 30px;
   margin-left: 20px;
@@ -344,11 +350,13 @@ body {
   background-color: #ffffff;
   border-radius: 7px;
   margin-left: 20px;
+  
 }
 
 .currentEvent_contenedor {
   border: 1px solid var(--background);
   border-radius: 7px;
+  
 }
 
 .currentEvent_contenedor h3 {
