--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -312,7 +312,7 @@ body {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  
+  transition: 1s;
 }
 .imgPost img {
   object-fit: cover;
@@ -321,6 +321,7 @@ body {
   margin:3px;
   border-radius:4px;
   border: 0.5px solid rgb(255, 255, 255);
+  transform: scale(1.2);
 }
 
 /* Event */
