--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -321,9 +321,12 @@ body {
   margin:3px;
   border-radius:4px;
   border: 0.5px solid rgb(255, 255, 255);
-  transform: scale(1.2);
+ 
 }
-
+.imgPost img:hover{
+  transform: scale(1.1);
+  cursor: pointer;
+}
 /* Event */
 
 .events {
