--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
+
+
 * {
   margin: 0;
   padding: 0;
@@ -15,6 +17,50 @@ body {
   --colorLetra: #4f5468;
   background-color: #f4f4f7;
 }
+
+/*CODIGO          INICIO              AuTi*/
+#notificacion {
+  color: #ff6262;
+}
+
+#notificacion:hover {
+  background-color: #f4f4f7;
+  cursor: pointer;
+}
+
+.contenedor_scroll_pendientes {
+  height: 380px;
+  overflow-y: scroll;
+}
+
+.pendientes {
+  border-bottom: 1px solid var(--background);
+
+}
+
+.pendientes:hover {
+  background-color: var(--background);
+ 
+  transition: color 100ms ease-out;
+  cursor: pointer;
+}
+
+.pendientes_titulo {
+  border-bottom: 1px solid var(--background);
+}
+
+.pendientes_tarea{
+  padding: 10px;
+  font-weight: 600;
+  font-size: 0.95rem;
+  color: var(--colorLetra);
+}
+.pendientes_tarea:hover{
+  color: var(--color);
+}
+
+
+/*CODIGO        FIN                AuTi*/
 .contenedorDiv {
   display: flex;
   height: 100%;
@@ -23,6 +69,7 @@ body {
   margin-left: auto;
   padding: 0 10px;
 }
+
 .sidebarUser img {
   height: 50px;
   border-radius: 50%;
@@ -51,14 +98,17 @@ body {
   margin-top: 30px;
   border-radius: 7px;
 }
+
 .sidebarOption {
   display: flex;
   align-items: center;
   cursor: pointer;
 }
+
 .sidebarOption .fas {
   padding: 15px;
 }
+
 .sidebarOption h2 {
   font-weight: 700;
   font-size: 20px;
@@ -99,6 +149,7 @@ details {
   background-color: white;
   border-radius: 7px;
 }
+
 .sidebarClass h3 {
   font-weight: 600;
   padding: 10px;
@@ -106,15 +157,20 @@ details {
   color: #4f5468;
   text-transform: uppercase;
 }
+
 .sidebarElement {
   padding: 10px;
 }
+
 .clases {
   padding: 10px;
-  font-weight: 600;
-  font-size: 1rem;
+ 
+  font-weight: 600; 
+  font-size: 0.95rem;
   color: #4f5468;
 }
+
+
 .clases:hover {
   background-color: var(--background);
   border-radius: 30px;
@@ -146,6 +202,7 @@ details {
   scrollbar-width: none;
   background-color: white;
 }
+
 .feed::-webkit-scrollbar {
   display: none;
 }
@@ -168,6 +225,7 @@ details {
   height: 50px;
   border-radius: 50%;
 }
+
 .boxText {
   padding-bottom: 10px;
   border-bottom: 1px solid var(--background);
@@ -182,6 +240,7 @@ details {
   display: flex;
   padding: 20px;
 }
+
 .boxText_input textarea {
   flex: 1;
   margin-left: 20px;
@@ -206,19 +265,24 @@ details {
   display: flex;
   width: 95%;
 }
+
 .select_file {
   margin-left: 5%;
 }
+
 .image-upload {
   margin-top: 20px;
 }
+
 .image-upload i {
   font-size: 26px;
 }
+
 .preview_contenedor h3 {
   font-size: 18px;
   font-weight: 500;
 }
+
 .preview_contenedor {
   width: 90%;
   height: 50px;
@@ -231,16 +295,20 @@ details {
   margin-top: 6px;
   overflow: hidden;
 }
+
 .preview {
   padding: 5px;
 }
+
 .file {
   font-size: 30px;
   color: var(--color);
 }
+
 .equis {
   margin-left: auto;
 }
+
 .boxText_btn {
   background-color: var(--color);
   border: none;
@@ -264,6 +332,7 @@ details {
 .post_avatar {
   padding: 20px;
 }
+
 .post_avatar img {
   height: 50px;
   border-radius: 50%;
@@ -273,6 +342,7 @@ details {
   max-width: 500px;
   padding: 10px;
 }
+
 .post_body img {
   width: 165px;
   height: 10vw;
@@ -297,20 +367,24 @@ details {
   font-size: 15px;
   color: rgb(0, 0, 0);
 }
+
 .post_body_text {
   margin-bottom: 20px;
   font-size: 15px;
   margin-top: 15px;
 }
+
 .post_body p {
   font-weight: 1000;
   font-size: 12px;
   color: grey;
 }
+
 .post_body span {
   font-weight: 600;
   font-size: 18px;
 }
+
 .previw_archivosPost {
   width: 398px;
   height: 55px;
@@ -322,15 +396,18 @@ details {
   margin-top: 6px;
   overflow: hidden;
 }
+
 .previw_archivosPost h3:hover {
   cursor: pointer;
   text-decoration: underline;
 }
+
 .previw_archivosPost h3 {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
 }
+
 .previw_archivosPost span {
   margin-left: 5px;
 }
@@ -341,6 +418,7 @@ details {
   flex-wrap: wrap;
   transition: 1s;
 }
+
 .imgPost img {
   object-fit: cover;
   width: 170px;
@@ -349,10 +427,12 @@ details {
   border-radius: 4px;
   border: 0.5px solid rgb(255, 255, 255);
 }
+
 .imgPost img:hover {
   transform: scale(1.1);
   cursor: pointer;
 }
+
 /* Event */
 
 .events {
@@ -361,6 +441,7 @@ details {
   position: sticky;
   top: 0;
 }
+
 .events_header {
   margin-top: 20px;
   background-color: white;
@@ -393,6 +474,7 @@ details {
   color: #4f5468;
   text-transform: uppercase;
 }
+
 .sidebarDot_event {
   height: 0.5rem;
   width: 0.5rem;
@@ -411,9 +493,11 @@ details {
 .events_icon {
   margin: auto;
 }
+
 .coloricono {
   color: #b2b2b2;
 }
+
 .sombra:hover {
   text-shadow: 1px 2px 4px #444444;
 }
@@ -422,7 +506,8 @@ details {
   margin-left: 27px;
 }
 
-.styleTarea input ,textarea{
+.styleTarea input,
+textarea {
   outline: none;
   width: 90%;
   height: 30px;
@@ -430,9 +515,11 @@ details {
   display: block;
   margin: 10px auto;
 }
+
 .styleTarea div {
   margin-top: 10px;
 }
+
 .select_tarea {
   outline: none;
   width: 90%;
@@ -452,8 +539,8 @@ details {
   width: 100%;
 }
 
-.boxText_btn_tarea{
-  
+.boxText_btn_tarea {
+
   background-color: var(--color);
   border: none;
   color: white;
@@ -465,7 +552,8 @@ details {
   margin-left: 348px;
   cursor: pointer;
 }
-.footer_tarea{
+
+.footer_tarea {
   display: flex;
   flex-direction: row;
 }
