--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -108,6 +108,10 @@ body {
     padding: 15px;
 }
 
+.sidebarOption .fal {
+    padding: 15px;
+}
+
 .sidebarOption h2 {
     font-weight: 700;
     font-size: 20px;
