--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -395,8 +395,9 @@ details {
 }
 
 .previw_archivosPost {
-    width: 398px;
-    height: 55px;
+    width: 390px;
+    height: 60px;
+    margin: auto;
     padding: 10px;
     display: flex;
     background-color: #f4f4f7;
