--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -778,7 +778,7 @@ textarea {
 
 .alumnoEntregaTarea_puntaje {
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     margin-right: 25px;
     margin-top: 10px;
 }
