--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -70,7 +70,8 @@ body {
 }
 
 .sidebarUser img {
-    height: 50px;
+    width: 55px;
+    height: 55px;
     border-radius: 50%;
 }
 
@@ -221,7 +222,8 @@ details {
 }
 
 .boxText_input img {
-    height: 50px;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
 }
 
@@ -347,7 +349,8 @@ details {
 }
 
 .post_avatar img {
-    height: 50px;
+    height: 70px;
+    width: 70px;
     border-radius: 50%;
 }
 
@@ -507,6 +510,42 @@ details {
 
 .events_icon {
     margin: auto;
+}
+
+.noticont {
+    position: relative;
+}
+
+.icon_noti p {
+    border-bottom: 1px solid var(--colorLetra);
+    font-size: 15px;
+    text-align: center;
+    margin: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.icon_noti p:last-child {
+    border-bottom: none;
+}
+
+.fa-bell-slash:hover {
+    border-radius: 50%;
+    color: var(--color);
+}
+
+.icon_noti {
+    display: none;
+    color: rgb(0, 0, 0);
+    width: 180px;
+    z-index: 100;
+    background-color: var(--background);
+    text-decoration: none;
+    outline: none;
+    border-radius: 7px;
+    position: absolute;
+    margin-top: 19px;
+    transform: translateX(-50%);
 }
 
 .coloricono {
@@ -825,6 +864,6 @@ textarea {
     width: 100%;
 }
 
-input[type=number]::-webkit-inner-spin-button {
+input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
