--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -18,6 +18,23 @@ body {
 
 /*CODIGO          INICIO              AuTi*/
 
+.navbar-materias {
+    justify-content: space-between;
+}
+
+.navbar {
+    border-bottom: 1px solid var(--background) !important;
+    padding: 0.25rem 1rem !important;
+}
+
+.navbar-materias li {
+    margin-left: 20px;
+    margin-right: 20px;
+    color: var(--colorLetra);
+    font-weight: 600;
+    font-size: 0.95rem;
+}
+
 #notificacion {
     color: #ff6262;
 }
