--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -904,3 +904,9 @@ textarea {
 input[type="number"]::-webkit-inner-spin-button {
     -webkit-appearance: none;
 }
+
+.spinnerCSS {
+    width: 50px;
+    height: 50px;
+    margin-top: 20px;
+}
