--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -244,6 +244,28 @@ details {
     font-weight: 800;
 }
 
+.sub_header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    border-bottom: 1px solid var(--background);
+    border-top: 1px solid var(--background);
+    padding: 15px 15px;
+}
+
+.fc-scrollgrid {
+    height: 300px;
+}
+
+.sub_header h3 {
+    margin: auto;
+    font-size: 18px;
+    font-weight: 600;
+}
+
 .boxText_input img {
     height: 65px;
     width: 65px;
