--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1029,3 +1029,7 @@ input[type="number"]::-webkit-inner-spin-button {
 .archivoTarea {
     width: 90%;
 }
+
+.entregaTareaCont h2 {
+    font-size: 23px;
+}
