Arreglo visual mostrar nota

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1091,6 +1091,13 @@ input[type="number"]::-webkit-inner-spin-button {
     justify-content: space-between;
 }
 
+.profeCalificacion input {
+    border-radius: 5px;
+    text-align: center;
+    width: 25%;
+    font-weight: 400;
+}
+
 .visualizarTareacomponentCorrecionProfe p {
     font-size: 15px;
     font-weight: 500;
