--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1129,3 +1129,8 @@ input[type="number"]::-webkit-inner-spin-button {
     width: 30px;
     line-height: 1.7;
 }
+
+.contTareaSele span {
+    font-weight: 600;
+    font-size: 18px;
+}
